--- a/Michel_Devichensky/package.json
+++ b/Michel_Devichensky/package.json
@@ -20,11 +20,18 @@
   },
   "homepage": "https://github.com/invector4ik002/react-14.01#readme",
   "devDependencies": {
+    "@babel/cli": "^7.8.3",
+    "@babel/core": "^7.8.3",
+    "@babel/preset-env": "^7.8.3",
+    "@babel/preset-react": "^7.8.3",
+    "babel-loader": "^8.0.6",
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10"
   },
   "dependencies": {
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "webpack-dev-server": "^3.10.1"
   }
 }
