--- a/Roman_Balashov/react_project/package.json
+++ b/Roman_Balashov/react_project/package.json
@@ -11,15 +11,16 @@
   "author": "Roman Balashov",
   "license": "ISC",
   "devDependencies": {
-    "html-webpack-plugin": "^3.2.0",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.10.1",
     "@babel/cli": "^7.8.3",
     "@babel/core": "^7.8.3",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-react": "^7.8.3",
     "babel-loader": "^8.0.6",
-    "webpack": "^4.41.5"
+    "html-webpack-plugin": "^3.2.0",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.10.1"
   },
   "dependencies": {
     "react": "^16.12.0",
