--- a/Michel_Devichensky/package.json
+++ b/Michel_Devichensky/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode=production",
-    "div": "webpack-dev-server --mode=development"
+    "dev": "webpack-dev-server --mode=development"
   },
   "repository": {
     "type": "git",
