--- a/Maxim_Vorobiev_Task_2/package.json
+++ b/Maxim_Vorobiev_Task_2/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"React Messenger by Maxim Vorobiev\"",
-    "prod": "webpack --mode=production",
-    "dev": "webpack --mode=development",
-    "devs": "webpack-dev-server --mode=development --open"
+    "build": "webpack --mode=production",
+    "devb": "webpack --mode=development",
+    "dev": "webpack-dev-server --mode=development --open"
   },
   "repository": {
     "type": "git",
