--- a/Anna_Puchkova/package.json
+++ b/Anna_Puchkova/package.json
@@ -12,8 +12,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/cli": "^7.8.3",
+    "@babel/core": "^7.8.3",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/preset-env": "^7.8.3",
+    "@babel/preset-react": "^7.8.3",
     "autoprefixer": "^9.7.4",
+    "babel-loader": "^8.0.6",
     "css-loader": "^3.4.2",
+    "extract-text-webpack-plugin": "^3.0.2",
     "extracted-loader": "^1.0.7",
     "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
@@ -27,12 +34,7 @@
     "webpack-dev-server": "^3.10.1"
   },
   "dependencies": {
-    "@babel/cli": "^7.8.3",
-    "@babel/core": "^7.8.3",
-    "@babel/preset-env": "^7.8.3",
-    "@babel/preset-react": "^7.8.3",
-    "babel-loader": "^8.0.6",
-    "extract-text-webpack-plugin": "^3.0.2",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   }
