--- a/Vladislav Ovinkin/Lesson2/package.json
+++ b/Vladislav Ovinkin/Lesson2/package.json
@@ -22,6 +22,7 @@
     "@babel/preset-react": "^7.8.3",
     "babel-loader": "^8.0.6",
     "html-webpack-plugin": "^3.2.0",
+    "prop-types": "^15.7.2",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1"
