--- a/DuginEvgeny/package.json
+++ b/DuginEvgeny/package.json
@@ -12,11 +12,18 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/cli": "^7.8.3",
+    "@babel/core": "^7.8.3",
+    "@babel/preset-env": "^7.8.3",
+    "@babel/preset-react": "^7.8.3",
+    "babel-loader": "^8.0.6",
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10"
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.10.1"
   },
   "dependencies": {
-    "webpack-dev-server": "^3.10.1"
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
   }
 }
