--- a/Ekaterina_Kirilenko/package.json
+++ b/Ekaterina_Kirilenko/package.json
@@ -24,8 +24,10 @@
     "webpack-dev-server": "^3.10.1"
   },
   "dependencies": {
+    "css-loader": "^3.4.2",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "style-loader": "^1.1.3"
   }
 }
