--- a/Daniil_Gorpinchenko/package.json
+++ b/Daniil_Gorpinchenko/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@babel/cli": "^7.8.3",
     "@babel/core": "^7.8.3",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-react": "^7.8.3",
     "babel-loader": "^8.0.6",
@@ -23,6 +24,7 @@
     "webpack-dev-server": "^3.10.1"
   },
   "dependencies": {
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   }
