--- a/Michel_Devichensky/package.json
+++ b/Michel_Devichensky/package.json
@@ -1,37 +1,29 @@
 {
-  "name": "react-14.01",
+  "name": "react_project",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "react.js study project",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode=production",
     "dev": "webpack-dev-server --mode=development"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/invector4ik002/react-14.01.git"
-  },
-  "keywords": [],
-  "author": "",
+  "author": "Roman Balashov",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/invector4ik002/react-14.01/issues"
-  },
-  "homepage": "https://github.com/invector4ik002/react-14.01#readme",
   "devDependencies": {
     "@babel/cli": "^7.8.3",
     "@babel/core": "^7.8.3",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-react": "^7.8.3",
     "babel-loader": "^8.0.6",
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10"
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.10.1"
   },
   "dependencies": {
     "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "webpack-dev-server": "^3.10.1"
+    "react-dom": "^16.12.0"
   }
 }
