--- a/Anna_Puchkova/package.json
+++ b/Anna_Puchkova/package.json
@@ -19,6 +19,7 @@
     "@babel/preset-react": "^7.8.3",
     "autoprefixer": "^9.7.4",
     "babel-loader": "^8.0.6",
+    "classnames": "^2.2.6",
     "css-loader": "^3.4.2",
     "extract-text-webpack-plugin": "^3.0.2",
     "extracted-loader": "^1.0.7",
@@ -34,6 +35,7 @@
     "webpack-dev-server": "^3.10.1"
   },
   "dependencies": {
+    "material-ui": "^0.20.2",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
