--- a/Artem_Romanov/package.json
+++ b/Artem_Romanov/package.json
@@ -20,6 +20,7 @@
     "babel-loader": "^8.0.6",
     "css-loader": "^3.4.2",
     "html-webpack-plugin": "^3.2.0",
+    "material-ui": "^0.20.2",
     "style-loader": "^1.1.3",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
