--- a/Maxim_Vorobiev/Lesson_3/package.json
+++ b/Maxim_Vorobiev/Lesson_3/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/Max1mCom/react-14.01#readme",
   "dependencies": {
+    "material-ui": "^0.20.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
