--- a/Roman_Beknazarov/package.json
+++ b/Roman_Beknazarov/package.json
@@ -23,8 +23,11 @@
     "webpack-dev-server": "^3.10.1"
   },
   "dependencies": {
+    "css-loader": "^3.4.2",
+    "material-ui": "^0.20.2",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "style-loader": "^1.1.3"
   }
 }
