--- a/Roman_Beknazarov/package.json
+++ b/Roman_Beknazarov/package.json
@@ -23,6 +23,7 @@
     "webpack-dev-server": "^3.10.1"
   },
   "dependencies": {
+    "@material-ui/core": "^4.9.0",
     "css-loader": "^3.4.2",
     "material-ui": "^0.20.2",
     "prop-types": "^15.7.2",
