--- a/Ekaterina_Kirilenko/package.json
+++ b/Ekaterina_Kirilenko/package.json
@@ -24,6 +24,8 @@
     "webpack-dev-server": "^3.10.1"
   },
   "dependencies": {
+    "@material-ui/core": "^4.9.0",
+    "classnames": "^2.2.6",
     "css-loader": "^3.4.2",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
