--- a/Yudaev_Aleksandr/package.json
+++ b/Yudaev_Aleksandr/package.json
@@ -12,9 +12,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^4.9.0",
+    "css-loader": "^3.4.2",
+    "material-ui": "^0.20.2",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "style-loader": "^1.1.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.3",
