--- a/Alexey_Bobkov/package.json
+++ b/Alexey_Bobkov/package.json
@@ -10,6 +10,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@material-ui/core": "^4.9.0",
         "react": "^16.12.0",
         "react-dom": "^16.12.0"
     },
@@ -20,8 +21,12 @@
         "@babel/preset-env": "^7.8.3",
         "@babel/preset-react": "^7.8.3",
         "babel-loader": "^8.0.6",
+        "css-loader": "^3.4.2",
         "html-webpack-plugin": "^3.2.0",
+        "node-sass": "^4.13.1",
         "prop-types": "^15.7.2",
+        "sass-loader": "^8.0.2",
+        "style-loader": "^1.1.3",
         "webpack": "^4.41.5",
         "webpack-cli": "^3.3.10",
         "webpack-dev-server": "^3.10.1"
