--- a/Vladislav Ovinkin/package.json
+++ b/Vladislav Ovinkin/package.json
@@ -20,6 +20,7 @@
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-react": "^7.8.3",
+    "@material-ui/core": "^4.9.0",
     "babel-loader": "^8.0.6",
     "classnames": "^2.2.6",
     "css-loader": "^3.4.2",
