--- a/Maxim_Vorobiev/package.json
+++ b/Maxim_Vorobiev/package.json
@@ -2,11 +2,11 @@
   "name": "react-messenger",
   "version": "1.0.0",
   "description": "GeekBrains Task",
-  "main": "Messenger.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"React Messenger by Maxim Vorobiev\"",
     "build": "webpack --mode=production",
-    "devb": "webpack --mode=development",
+    "dev-build": "webpack --mode=development",
     "dev": "webpack-dev-server --mode=development --open"
   },
   "repository": {
@@ -24,7 +24,9 @@
   },
   "homepage": "https://github.com/Max1mCom/react-14.01#readme",
   "dependencies": {
-    "material-ui": "^0.20.2",
+    "@material-ui/core": "^4.9.0",
+    "@material-ui/icons": "^4.5.1",
+    "classnames": "^2.2.6",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
@@ -39,6 +41,7 @@
     "html-webpack-plugin": "^3.2.0",
     "prop-types": "^15.7.2",
     "style-loader": "^1.1.3",
+    "url-loader": "^3.0.0",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1"
