--- a/Alexey_Bobkov/package.json
+++ b/Alexey_Bobkov/package.json
@@ -11,6 +11,7 @@
     "license": "ISC",
     "dependencies": {
         "@material-ui/core": "^4.9.0",
+        "@material-ui/icons": "^4.5.1",
         "react": "^16.12.0",
         "react-dom": "^16.12.0"
     },
