--- a/Anna_Tokareva/lesson_2/package.json
+++ b/Anna_Tokareva/lesson_2/package.json
@@ -31,6 +31,7 @@
     "classnames": "^2.2.6",
     "material-ui": "^0.20.2",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2"
   }
 }
