--- a/Roman_Beknazarov/package.json
+++ b/Roman_Beknazarov/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.9.0",
+    "classnames": "^2.2.6",
     "css-loader": "^3.4.2",
     "material-ui": "^0.20.2",
     "prop-types": "^15.7.2",
