--- a/Olga_Zaglavnova/Lesson3/package.json
+++ b/Olga_Zaglavnova/Lesson3/package.json
@@ -31,6 +31,8 @@
     "classnames": "^2.2.6",
     "fg-loadcss": "^2.1.0",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
+    "react-scrollable-feed": "^1.1.2"
   }
 }
