--- a/Maxim_Vorobiev/package.json
+++ b/Maxim_Vorobiev/package.json
@@ -28,7 +28,8 @@
     "@material-ui/icons": "^4.5.1",
     "classnames": "^2.2.6",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.3",
