--- a/Ekaterina_Kirilenko/package.json
+++ b/Ekaterina_Kirilenko/package.json
@@ -25,11 +25,13 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.9.0",
+    "@material-ui/icons": "^4.5.1",
     "classnames": "^2.2.6",
     "css-loader": "^3.4.2",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
     "style-loader": "^1.1.3"
   }
 }
