--- a/Alexey_Bobkov/package.json
+++ b/Alexey_Bobkov/package.json
@@ -13,7 +13,8 @@
         "@material-ui/core": "^4.9.0",
         "@material-ui/icons": "^4.5.1",
         "react": "^16.12.0",
-        "react-dom": "^16.12.0"
+        "react-dom": "^16.12.0",
+        "react-router-dom": "^5.1.2"
     },
     "devDependencies": {
         "@babel/cli": "^7.8.3",
