--- a/Roman_Balashov/react_project/package.json
+++ b/Roman_Balashov/react_project/package.json
@@ -22,6 +22,7 @@
     "classnames": "^2.2.6",
     "css-loader": "^3.4.2",
     "html-webpack-plugin": "^3.2.0",
+    "react-router-dom": "^5.1.2",
     "style-loader": "^1.1.3",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
