--- a/Maxim_Vorobiev/package.json
+++ b/Maxim_Vorobiev/package.json
@@ -28,6 +28,7 @@
     "@material-ui/icons": "^4.5.1",
     "classnames": "^2.2.6",
     "react": "^16.12.0",
+    "react-addons-update": "^15.6.2",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
