--- a/vladimir.veremchuk/package.json
+++ b/vladimir.veremchuk/package.json
@@ -28,8 +28,10 @@
     "webpack-dev-server": "^3.10.1"
   },
   "dependencies": {
+    "@material-ui/core": "^4.9.0",
     "material-ui": "^0.20.2",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2"
   }
 }
