--- a/Roman_Balashov/react_project/package.json
+++ b/Roman_Balashov/react_project/package.json
@@ -29,9 +29,12 @@
     "webpack-dev-server": "^3.10.1"
   },
   "dependencies": {
-    "prop-types": "^15.7.2",
     "@material-ui/core": "^4.9.0",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.5",
+    "redux-actions": "^2.6.5"
   }
 }
