--- a/Maxim_Vorobiev/package.json
+++ b/Maxim_Vorobiev/package.json
@@ -32,7 +32,8 @@
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-action": "^1.2.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.3",
