--- a/Olga_Zaglavnova/Lesson3/package.json
+++ b/Olga_Zaglavnova/Lesson3/package.json
@@ -32,7 +32,10 @@
     "fg-loadcss": "^2.1.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "react-scrollable-feed": "^1.1.2"
+    "react-scrollable-feed": "^1.1.2",
+    "redux": "^4.0.5",
+    "redux-actions": "^2.6.5"
   }
 }
