--- a/Alexey_Bobkov/package.json
+++ b/Alexey_Bobkov/package.json
@@ -15,16 +15,16 @@
         "react-redux": "^7.1.3",
         "react-router-dom": "^5.1.2",
         "redux": "^4.0.5",
-        "redux-action": "^1.2.2"
+        "redux-actions": "^2.6.5"
     },
     "devDependencies": {
-        "@babel/cli": "^7.8.3",
-        "@babel/core": "^7.8.3",
+        "@babel/cli": "^7.8.4",
+        "@babel/core": "^7.8.4",
         "@babel/plugin-proposal-class-properties": "^7.8.3",
-        "@babel/preset-env": "^7.8.3",
+        "@babel/preset-env": "^7.8.4",
         "@babel/preset-react": "^7.8.3",
-        "@material-ui/core": "^4.9.0",
-        "@material-ui/icons": "^4.5.1",
+        "@material-ui/core": "^4.9.1",
+        "@material-ui/icons": "^4.9.1",
         "babel-loader": "^8.0.6",
         "css-loader": "^3.4.2",
         "html-webpack-plugin": "^3.2.0",
@@ -34,6 +34,6 @@
         "style-loader": "^1.1.3",
         "webpack": "^4.41.5",
         "webpack-cli": "^3.3.10",
-        "webpack-dev-server": "^3.10.1"
+        "webpack-dev-server": "^3.10.2"
     }
 }
