--- a/Maxim_Vorobiev/package.json
+++ b/Maxim_Vorobiev/package.json
@@ -27,13 +27,15 @@
     "@material-ui/core": "^4.9.0",
     "@material-ui/icons": "^4.5.1",
     "classnames": "^2.2.6",
+    "immutability-helper": "^3.0.1",
     "react": "^16.12.0",
     "react-addons-update": "^15.6.2",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
-    "redux-action": "^1.2.2"
+    "redux-action": "^1.2.2",
+    "redux-actions": "^2.6.5"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.3",
