--- a/Anna_Puchkova/package.json
+++ b/Anna_Puchkova/package.json
@@ -35,8 +35,11 @@
     "webpack-dev-server": "^3.10.1"
   },
   "dependencies": {
+    "@material-ui/core": "^4.9.1",
+    "@material-ui/icons": "^4.9.1",
     "connected-react-router": "^6.6.1",
     "history": "^4.10.1",
+    "material-icons": "^0.3.1",
     "material-ui": "^0.20.2",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
