--- a/Alexey_Bobkov/package.json
+++ b/Alexey_Bobkov/package.json
@@ -27,6 +27,13 @@
         "@material-ui/icons": "^4.9.1",
         "babel-loader": "^8.0.6",
         "css-loader": "^3.4.2",
+        "eslint": "^6.8.0",
+        "eslint-config-standard": "^14.1.0",
+        "eslint-plugin-import": "^2.20.1",
+        "eslint-plugin-node": "^11.0.0",
+        "eslint-plugin-promise": "^4.2.1",
+        "eslint-plugin-react": "^7.18.3",
+        "eslint-plugin-standard": "^4.0.1",
         "html-webpack-plugin": "^3.2.0",
         "node-sass": "^4.13.1",
         "prop-types": "^15.7.2",
