--- a/Roman_Beknazarov/package.json
+++ b/Roman_Beknazarov/package.json
@@ -17,7 +17,9 @@
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-react": "^7.8.3",
     "babel-loader": "^8.0.6",
+    "css-loader": "^3.4.2",
     "html-webpack-plugin": "^3.2.0",
+    "style-loader": "^1.1.3",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1"
@@ -25,12 +27,12 @@
   "dependencies": {
     "@material-ui/core": "^4.9.0",
     "classnames": "^2.2.6",
-    "css-loader": "^3.4.2",
-    "material-ui": "^0.20.2",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "style-loader": "^1.1.3"
+    "redux": "^4.0.5",
+    "redux-actions": "^2.6.5"
   }
 }
