--- a/Serebrennikov_Vladimir/package.json
+++ b/Serebrennikov_Vladimir/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.9.0",
+    "@material-ui/icons": "^4.9.1",
     "classnames": "^2.2.6",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
