--- a/Daniil_Gorpinchenko/package.json
+++ b/Daniil_Gorpinchenko/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode=production",
-    "dev": "webpack-dev-server --mode=development --open"
+    "dev": "webpack-dev-server --mode=development --open",
+    "lint": "eslint src/**/**.js src/**/**.jsx",
+    "lint:fix": "eslint src/**/**.js src/**/**.jsx --fix"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +21,7 @@
     "@babel/preset-react": "^7.8.3",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.4.2",
+    "eslint-plugin-react": "^7.18.3",
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^1.1.3",
     "webpack": "^4.41.5",
@@ -28,6 +31,7 @@
   "dependencies": {
     "@material-ui/core": "^4.9.0",
     "classnames": "^2.2.6",
+    "eslint": "^6.8.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
