--- a/vladimir.veremchuk/package.json
+++ b/vladimir.veremchuk/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.9.0",
+    "connected-react-router": "^6.6.1",
     "material-ui": "^0.20.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
