--- a/Roman_Beknazarov/package.json
+++ b/Roman_Beknazarov/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.9.0",
+    "@material-ui/icons": "^4.9.1",
     "classnames": "^2.2.6",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
