--- a/Daniil_Gorpinchenko/package.json
+++ b/Daniil_Gorpinchenko/package.json
@@ -31,7 +31,9 @@
   "dependencies": {
     "@material-ui/core": "^4.9.0",
     "classnames": "^2.2.6",
+    "connected-react-router": "^6.6.1",
     "eslint": "^6.8.0",
+    "history": "^4.10.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
