--- a/Olga_Zaglavnova/Lesson3/package.json
+++ b/Olga_Zaglavnova/Lesson3/package.json
@@ -43,7 +43,9 @@
     "react-scrollable-feed": "^1.1.2",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
+    "redux-api-middleware": "^3.2.0",
     "redux-logger": "^3.0.6",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.3.0"
   }
 }
