--- a/Olga_Bogdanova/package.json
+++ b/Olga_Bogdanova/package.json
@@ -11,17 +11,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/preset-env": "^7.8.3",
     "@babel/cli": "^7.8.3",
-    "babel-loader": "^8.0.6",
     "@babel/core": "^7.8.3",
-    "prop-types": "^15.7.2",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/preset-env": "^7.8.3",
     "@babel/preset-react": "^7.8.3",
+    "babel-loader": "^8.0.6",
     "css-loader": "^3.4.2",
     "html": "^1.0.0",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.13.1",
+    "prop-types": "^15.7.2",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
     "webpack": "^4.41.5",
@@ -34,6 +34,9 @@
     "material-ui": "^0.20.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-router-dom": "^5.1.2"
+    "react-redux": "^7.1.3",
+    "react-router-dom": "^5.1.2",
+    "redux": "^4.0.5",
+    "redux-actions": "^2.6.5"
   }
 }
