--- a/Roman_Balashov/react_project/package.json
+++ b/Roman_Balashov/react_project/package.json
@@ -42,6 +42,7 @@
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0"
   }
 }
