--- a/Daniil_Gorpinchenko/package.json
+++ b/Daniil_Gorpinchenko/package.json
@@ -41,6 +41,7 @@
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
+    "redux-api-middleware": "^3.2.0",
     "redux-logger": "^3.0.6"
   }
 }
