--- a/Daniil_Gorpinchenko/package.json
+++ b/Daniil_Gorpinchenko/package.json
@@ -42,6 +42,7 @@
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
     "redux-api-middleware": "^3.2.0",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
   }
 }
