--- a/Vladimir_Frolov/package.json
+++ b/Vladimir_Frolov/package.json
@@ -29,11 +29,14 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.9.1",
+    "connected-react-router": "^6.7.0",
+    "history": "^4.10.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
-    "redux-actions": "^2.6.5"
+    "redux-actions": "^2.6.5",
+    "redux-persist": "^6.0.0"
   }
 }
