--- a/Vladislav Ovinkin/package.json
+++ b/Vladislav Ovinkin/package.json
@@ -12,7 +12,9 @@
   "description": "",
   "dependencies": {
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.3",
@@ -27,6 +29,7 @@
     "html-webpack-plugin": "^3.2.0",
     "prop-types": "^15.7.2",
     "react-router-dom": "^5.1.2",
+    "redux-actions": "^2.6.5",
     "style-loader": "^1.1.3",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
