--- a/Anna_Puchkova/package.json
+++ b/Anna_Puchkova/package.json
@@ -41,6 +41,7 @@
     "history": "^4.10.1",
     "material-icons": "^0.3.1",
     "material-ui": "^0.20.2",
+    "normalizr": "^3.5.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-addons-update": "^15.6.2",
@@ -48,6 +49,7 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
+    "redux-api-middleware": "^3.2.0",
     "redux-persist": "^6.0.0"
   }
 }
