--- a/Roman_Beknazarov/package.json
+++ b/Roman_Beknazarov/package.json
@@ -31,7 +31,9 @@
     "@material-ui/core": "^4.9.0",
     "@material-ui/icons": "^4.9.1",
     "classnames": "^2.2.6",
+    "connected-react-router": "^6.7.0",
     "eslint": "^6.8.0",
+    "history": "^4.10.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
