--- a/Vladimir_Frolov/package.json
+++ b/Vladimir_Frolov/package.json
@@ -37,6 +37,7 @@
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
+    "redux-api-middleware": "^3.2.0",
     "redux-persist": "^6.0.0"
   }
 }
