--- a/Alexey_Bobkov/package.json
+++ b/Alexey_Bobkov/package.json
@@ -15,7 +15,8 @@
         "react-redux": "^7.1.3",
         "react-router-dom": "^5.1.2",
         "redux": "^4.0.5",
-        "redux-actions": "^2.6.5"
+        "redux-actions": "^2.6.5",
+        "redux-logger": "^3.0.6"
     },
     "devDependencies": {
         "@babel/cli": "^7.8.4",
