--- a/Alexey_Bobkov/package.json
+++ b/Alexey_Bobkov/package.json
@@ -10,6 +10,8 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "connected-react-router": "^6.7.0",
+        "history": "^4.10.1",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
         "react-redux": "^7.1.3",
