--- a/Nikita_Golodnov/lesson_1/package.json
+++ b/Nikita_Golodnov/lesson_1/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "webpack-dev-server --mode=development",
     "lint": "eslint src/**/**.js src/**/**.jsx",
     "lint:fix": "eslint src/**/**.js src/**/**.jsx --fix"
@@ -20,8 +20,11 @@
     "@babel/preset-react": "^7.8.3",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.4.2",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "eslint-plugin-react": "^7.18.3",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^25.1.0",
     "style-loader": "^1.1.3",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
@@ -38,6 +41,7 @@
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
+    "react-test-renderer": "^16.12.0",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
     "redux-api-middleware": "^3.2.0",
