Почистил код от закомментированного старого, усмирил бота.
Оказалось, что после того, как поместил бота в middleware, он снова отвечал на каждое сообщение, если их отправлять одному пользователю быстро

--- a/Vladislav Ovinkin/.eslintrc.json
+++ b/Vladislav Ovinkin/.eslintrc.json
@@ -11,8 +11,10 @@
         "Atomics": "readonly",
         "SharedArrayBuffer": "readonly"
     },
+    "parser": "babel-eslint",
     "parserOptions": {
         "ecmaFeatures": {
+            "arrowFunctions":true,
             "jsx": true
         },
         "ecmaVersion": 2018,
