Теперь после добавления чата автоматически оказываемся в этом чате.
установил connected-react-router, history

--- a/Vladislav Ovinkin/package.json
+++ b/Vladislav Ovinkin/package.json
@@ -13,6 +13,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "connected-react-router": "^6.7.0",
+    "history": "^4.10.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
